App name and package change

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,17 +6,17 @@ plugins {
 }
 
 android {
-    namespace 'com.template2024'
+    namespace 'com.nomaan.simplerecipes'
     compileSdk 34
 
     defaultConfig {
-        applicationId "com.template2024"
+        applicationId "com.nomaan.simplerecipes"
         minSdk 28
         targetSdk 34
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "com.template2024.InstrumentationTestRunner"
+        testInstrumentationRunner "com.nomaan.simplerecipes.InstrumentationTestRunner"
 
         ksp {
             arg("room.incremental", "true")
